--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     </div>
                 </div>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3747.523039032956!2d-44.58315292476915!3d-20.070411181349847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjDCsDA0JzEzLjUiUyA0NMKwMzQnNTAuMSJX!5e0!3m2!1spt-BR!2sbr!4v1749497645590!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7494.810003050378!2d-44.57476844999999!3d-20.07535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa732c593985b29%3A0x98db6b240c934138!2sCentro%2C%20Ita%C3%BAna%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1749566594778!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
